[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Konstantin Antonov <knstantna@gmail.com>"] 
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1

#[lib]
#crate-type = ["dylib"]

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = ["bevy/dynamic",]

[dependencies]
common = { path = "../common" }
peer = { path = "../peer" }
serde = { version = "1.0.144", features = ["serde_derive"] }
url = "2.2.2"
tokio = { version = "1.20.1", features = ["full"] }
env_logger = "0.9.0"
clap = "3.2.17"
libp2p = "0.46.1"
async-stream = "0.3.3"
futures = "0.3.23"

rand = "0.8.3"
bevy = { version = "0.8.1", default-features = false}#, features = ["dynamic"] }
bevy_kira_audio = { version = "0.12" }
bevy_asset_loader = { version = "0.12" }
bevy_rapier3d = { version = "0.16.2", features = [ "parallel", "debug-render", "serde-serialize", ] }
bevy_prototype_debug_lines = { version = "0.8.1", features = ["3d"] }
iyes_loopless = { version = "0.7.1"}
bevy-inspector-egui = { version = "0.12.0" }
async-std = { version = "1.12.0", features = ["attributes"] }
log = "0.4.17"
tracing-subscriber = { version = "0.3.15", features = [
    "registry",
    "env-filter",
] }
tracing-tracy = { version = "0.10.0" }
tracing-log = "0.1.3"
tracing-error = { version = "0.2.0" }

#[build-dependencies]
#embed-resource = "1.7.3"

#[target.x86_64-pc-windows-msvc]
#linker = "rust-lld.exe"
#rustflags = ["-Zshare-generics=off"]



